syntax = "proto3";

option go_package = "duck/mongodb;mongodb";

message ObjectID {
    bytes Data = 1; 
}
